--- a/style.css
+++ b/style.css
@@ -90,10 +90,12 @@ section {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	align-content: space-around;
+	flex-wrap: wrap;
 }
 
 section div{
-	margin: 15px;
+	margin: 20px;
 	padding: 10px 10px 10px 40px;
 	background-color: #FFFFFF;
 	border-radius: 8px;
@@ -109,18 +111,56 @@ section div{
 
 }
 
-.byography {
+.byography{
 	width: 60%;
 	font-family: HelveticaR;
 }
 
-.byography_title, .learning_last_title {
+.byography_title, .learning_title, .other_title, .english_title {
 	font-size: 30px;
-	color: #086AAA;
+	color: #0D5587;
+	font-style: normal;
 }
 
-.byography_description {
+.byography_description, .learning_description, .other_description, .english_description {
 	font-size: 20px;
 	color: #000000;
-	line-height: 1.5;
+	line-height: 2;
 }
+
+.learning{ 
+	width: 30%;
+	font-family: HelveticaR;
+}
+
+.learning_description li, .other_description li {
+	list-style-type: none;
+}
+
+.learning_description li:before {
+	content: "→";
+}
+
+.learning_description li a{
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.other, .english {
+	width: 20%;
+	font-family: HelveticaR;
+}
+
+
+.project_1, .project_2, .project_3, .project_4 {
+	width: 40%;
+	font-family: HelveticaR;
+}
+
+.project_title {
+	font-size: 30px;
+	color: #0D5587;
+	font-style: normal;
+}
+
+
